# HER-managementSystem

./: .gitignore  Dockerfile  README.md  __init__.py  app.py  baseline.py  grader.py  hospital_env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
client_notebooks/: baseline_inference.py
scripts/: validate-submission.sh
server/: __init__.py  app.py  flask_app_legacy.py  main.py
server/openenv_wrapper/: hospital_openenv_wrapper.py
static/: index.html
